[workspace]
[package]
version = "0.1.0"
name = "sp1-revm-kzg-profile"
edition = "2021"

[dependencies]
alloy-sol-types = "0.7.2"
# sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
# sp1-derive = { git = "https://github.com/succinctlabs/sp1.git", branch = "main" }
sp1-zkvm = { path = "../../sp1/zkvm/entrypoint" }
sp1-derive = { path = "../../sp1/derive" }
sp1-lib = { path = "../../sp1/zkvm/lib" }
bls12_381 = { path = "../../bls12_381", features = ["groups", "pairings"] }
substrate-bn = { path = "../../bn" }
# zkvm-pairings = { path = "../../zkvm-pairings" }

revm-precompile = { path = "../../revm/crates/precompile", features = [
    'std',
], default-features = false }
# revm-primitives = { path = "../../revm/crates/primitives", features = [
#     'std',
#     'kzg-rs',
# ], default-features = false }
# revm-precompile = { path = "../../revm/crates/precompile" }
hex = { version = "0.4", default-features = false }
sha2 = { version = "0.10", default-features = false }
subtle = "2.6.1"
rand = "0.8.5"
num-bigint = "0.4.6"
bytemuck = "1.16.3"
num = "0.4.3"
